--- a/ruby/common/build.gradle
+++ b/ruby/common/build.gradle
@@ -7,9 +7,21 @@ task protoc(type: Exec, dependsOn: ':ruby:protoc:build') {
     "-v", "${apiDir}:/work/src",
     "-v", "${projectDir}:/work/out",
     "-w", "/work",
-    "${images.protoc}:ruby",
+    images.protocRuby,
     protos.collect { "src/${apiDir.relativize(it.toPath())}" }.join(' ')
   ]
 
   inputs.files protos
+  outputs.files fileTree(dir: projectDir, include: '**/*_pb.rb')
+}
+
+def gemOutput = "${buildDir}/dependabot-ruby-common.gem"
+
+task build(type: Exec, dependsOn: protoc) {
+  executable 'gem'
+  args = ['build', '-o', gemOutput, 'dependabot-ruby-common.gemspec']
+
+  inputs.file 'dependabot-ruby-common.gemspec'
+  inputs.dir 'lib'
+  outputs.file gemOutput
 }
