--- a/ruby/bundler/build.gradle
+++ b/ruby/bundler/build.gradle
@@ -1,6 +1,7 @@
 task build(type: Exec) {
-  executable "gem"
-  args = ["build", "dependabot-ruby-bundler.gemspec"]
+  executable 'docker'
+  args = ['build', '.']
+  inputs.file 'Dockerfile'
   inputs.file "dependabot-ruby-bundler.gemspec"
-  outputs.files fileTree(dir: projectDir, include: 'dependabot-ruby-bundler-*.gem')
+  // outputs.files fileTree(dir: projectDir, include: 'dependabot-ruby-bundler-*.gem')
 }
