--- a/ruby/protoc/build.gradle
+++ b/ruby/protoc/build.gradle
@@ -1,6 +1,8 @@
+println images.protocRuby
+
 task build(type: Exec, dependsOn: ':tools:protoc:build') {
-  executable "docker"
-  args "build", "-t", "${images.protoc}:ruby", "."
+  executable 'docker'
+  args 'build', '-t', images.protocRuby, '.'
 
   workingDir projectDir
   inputs.file 'Dockerfile'
