--- a/go/protoc/Dockerfile
+++ b/go/protoc/Dockerfile
@@ -1,4 +1,9 @@
 FROM dependagot-protoc
 
+COPY go.mod go.sum /app/
+WORKDIR /app
+RUN go mod download
+RUN go install github.com/twitchtv/twirp/protoc-gen-twirp
+
 COPY protoc.sh /protoc.sh
 ENTRYPOINT ["/protoc.sh"]
