golang updates and render patches from cli NEATO

--- a/tools/protoc/Dockerfile
+++ b/tools/protoc/Dockerfile
@@ -1,7 +1,7 @@
 FROM golang:1.14.1
 
 RUN apt-get update \
-  && apt-get -fy install unzip ruby-bundler \
+  && apt-get -fy install unzip \
   && rm -rf /var/lib/apt/lists/*
 
 # Protoc binary:
