rename api project

--- a/build.gradle
+++ b/build.gradle
@@ -1,3 +1,12 @@
 ext.images = [
   protoc: 'dependagot-protoc',
 ]
+
+
+subprojects {
+    task clean {
+        doFirst {
+            buildDir.deleteDir()
+        }
+    }
+}
