--- a/settings.gradle
+++ b/settings.gradle
@@ -1,8 +1,8 @@
-include ':api'
 include ':go:cli'
 include ':go:common'
 include ':go:modules'
 include ':go:protoc'
+include ':proto'
 include ':ruby:common'
 include ':ruby:bundler'
 include ':ruby:protoc'
