--- a/settings.gradle
+++ b/settings.gradle
@@ -6,4 +6,6 @@ include ':proto'
 include ':ruby:common'
 include ':ruby:bundler'
 include ':ruby:protoc'
+include ':rust:cargo'
+include ':rust:common'
 include ':tools:protoc'
