--- a/rust/cargo/Cargo.toml
+++ b/rust/cargo/Cargo.toml
@@ -1,13 +1,13 @@
 [package]
 name = "dependagot-rust-cargo"
 version = "0.1.0"
+edition = "2018"
 
 [dependencies]
-bytes = "0.4"
-futures = "0.1"
-hyper = "0.11"
-prost = "0.3"
-prost-twirp = "0.1.0"
-prost-derive = "0.3"
-serde_json = "1.0"
 dependagot-common = { path = "../common/" }
+prost = "0.6.1"
+serde = "1.0"
+serde_derive = "1.0"
+tokio = { version = "0.2", features = ["macros"] }
+warp = "0.2"
+warp-protobuf = "0.1.0"
