--- a/rust/cargo/Cargo.toml
+++ b/rust/cargo/Cargo.toml
@@ -5,9 +5,12 @@ edition = "2018"
 
 [dependencies]
 dependagot-common = { path = "../common/" }
+log = "0.4.8"
+env_logger = "0.7.1"
 prost = "0.6.1"
 serde = "1.0"
 serde_derive = "1.0"
 tokio = { version = "0.2", features = ["macros"] }
 warp = "0.2"
 warp-protobuf = "0.1.0"
+cargo_toml = "0.8.0"
