rust: fix dockerfile

--- a/rust/cargo/Dockerfile
+++ b/rust/cargo/Dockerfile
@@ -1,4 +1,4 @@
-FROM rust:1.42.0-slim-buster AS dev
+FROM rust:1.42.0-buster AS dev
 
 WORKDIR /src
 RUN USER=root cargo new dependagot-rust-cargo
@@ -14,5 +14,8 @@ COPY cargo/src ./src
 RUN cargo build --release
 
 FROM debian:buster-slim
+RUN apt-get update \
+  && apt-get -fy install libcurl4 openssl \
+  && rm -rf /var/lib/apt/lists/*
 COPY --from=dev /src/dependagot-rust-cargo/target/release/dependagot-rust-cargo /dependagot-rust-cargo
 ENTRYPOINT ["/dependagot-rust-cargo"]
